--- a/example.css
+++ b/example.css
@@ -1,10 +1,5 @@
 body{
-	padding-bottom: 300px!important;
-	padding: 12px;
 	background-color: #f8f8f8;
-}
-.page{
-
 }
 .page-header{
 	font-size: 1.6rem;
@@ -14,8 +9,11 @@ body{
 	padding:15px;
 	background-color: #fff;
 }
+.page-index>.page-body{
+	padding: 15px 0;
+}
 .page-footer{
-
+	
 }
 .page.tab{
 	position: absolute;
@@ -26,7 +24,6 @@ body{
 	padding: 0;
 	background-color: transparent;
 }
-
 .table-title{
 	padding: 1rem 0;
 	font-weight: bold;
